--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,8 @@ on:
 jobs:
   release:
     runs-on: ubuntu-latest
+    outputs:
+      upload_url: ${{ steps.release.outputs.upload_url }}
     steps:
       - name: checkout
         uses: actions/checkout@v3
@@ -43,6 +45,36 @@ jobs:
         run: make -C cmd/convox build
         env:
           IMAGE: ${{ github.repository }}
+      - name: upload-convox-linux-amd64
+        uses: actions/upload-artifact@v2
+        with:
+          name: convox-linux-amd64
+          path: ./cmd/convox/pkg/convox-linux-amd64
+      - name: upload-convox-linux-arm64
+        uses: actions/upload-artifact@v2
+        with:
+          name: convox-linux-arm64
+          path: ./cmd/convox/pkg/convox-linux-arm64
+      - name: upload-convox-darwin-10.16-amd64
+        uses: actions/upload-artifact@v2
+        with:
+          name: convox-darwin-10.16-amd64
+          path: ./cmd/convox/pkg/convox-darwin-10.16-amd64
+      - name: upload-convox-darwin-arm64
+        uses: actions/upload-artifact@v2
+        with:
+          name: convox-darwin-arm64
+          path: ./cmd/convox/pkg/convox-darwin-arm64
+  build-amd64:
+    needs: release
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: version
+        run: echo "VERSION=$(echo ${{ github.ref }} | awk -F/ '{print $3}')" >> $GITHUB_ENV
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
       - name: Set up Docker Buildx
@@ -53,48 +85,127 @@ jobs:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       - name: build-amd64
-        run: docker buildx build --platform linux/amd64 -t ${{ github.repository }}:${{ env.VERSION }} --push --cache-from type=registry,ref=${{ github.repository }} --cache-to type=registry,ref=${{ github.repository }},mode=max .
+        run: "docker buildx build --platform linux/amd64 -t ${{ github.repository }}:${{ env.VERSION }} --push --cache-from type=registry,ref=${{ github.repository }} --cache-to type=registry,ref=${{ github.repository }},mode=max ."
+  build-arm64:
+    needs: release
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: version
+        run: echo "VERSION=$(echo ${{ github.ref }} | awk -F/ '{print $3}')" >> $GITHUB_ENV
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: login
+        run: docker login --username "${DOCKER_USERNAME}" --password "${DOCKER_PASSWORD}"
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       - name: build-arm64
-        run: docker buildx build --platform linux/arm64 -t ${{ github.repository }}:${{ env.VERSION }}-arm64 --push --cache-from type=registry,ref=${{ github.repository }} --cache-to type=registry,ref=${{ github.repository }},mode=max --build-arg DOCKER_ARCH=aarch64 --build-arg KUBECTL_ARCH=arm64 .
-      - name: release-cli-linux
-        uses: actions/upload-release-asset@v1.0.2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: "docker buildx build --platform linux/arm64 -t ${{ github.repository }}:${{ env.VERSION }}-arm64 --push --cache-from type=registry,ref=${{ github.repository }} --cache-to type=registry,ref=${{ github.repository }},mode=max --build-arg DOCKER_ARCH=aarch64 --build-arg KUBECTL_ARCH=arm64 ."
+  release-cli-linux:
+    needs:
+      - release
+      - build-amd64
+      - build-arm64
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout
+        uses: actions/checkout@v3
         with:
-          upload_url: ${{ steps.release.outputs.upload_url }}
-          asset_path: ./cmd/convox/pkg/convox-linux-amd64
+          fetch-depth: 0
+      - uses: actions/download-artifact@v2
+        with:
+          name: convox-linux-amd64
+      - name: release
+        env:
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+        uses: actions/upload-release-asset@v1.0.2
+        with:
+          asset_content_type: application/octet-stream
           asset_name: convox-linux
-          asset_content_type: application/octet-stream
-      - name: release-cli-linux-arm64
-        uses: actions/upload-release-asset@v1.0.2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          asset_path: ./convox-linux-amd64
+          upload_url: "${{ needs.release.outputs.upload_url }}"
+  release-cli-linux-arm64:
+    needs:
+      - release
+      - build-amd64
+      - build-arm64
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout
+        uses: actions/checkout@v3
         with:
-          upload_url: ${{ steps.release.outputs.upload_url }}
-          asset_path: ./cmd/convox/pkg/convox-linux-arm64
+          fetch-depth: 0
+      - uses: actions/download-artifact@v2
+        with:
+          name: convox-linux-arm64
+      - name: release
+        env:
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+        uses: actions/upload-release-asset@v1.0.2
+        with:
+          asset_content_type: application/octet-stream
           asset_name: convox-linux-arm64
-          asset_content_type: application/octet-stream
-      - name: release-cli-macos
-        uses: actions/upload-release-asset@v1.0.2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          asset_path: ./convox-linux-arm64
+          upload_url: "${{ needs.release.outputs.upload_url }}"
+  release-cli-macos:
+    needs:
+      - release
+      - build-amd64
+      - build-arm64
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout
+        uses: actions/checkout@v3
         with:
-          upload_url: ${{ steps.release.outputs.upload_url }}
-          asset_path: ./cmd/convox/pkg/convox-darwin-10.16-amd64
+          fetch-depth: 0
+      - uses: actions/download-artifact@v2
+        with:
+          name: convox-darwin-10.16-amd64
+      - name: release
+        env:
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+        uses: actions/upload-release-asset@v1.0.2
+        with:
+          asset_content_type: application/octet-stream
           asset_name: convox-macos
-          asset_content_type: application/octet-stream
-      - name: release-cli-macos-arm64
-        uses: actions/upload-release-asset@v1.0.2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          asset_path: ./convox-darwin-10.16-amd64
+          upload_url: "${{ needs.release.outputs.upload_url }}"
+  release-cli-macos-arm64:
+    needs:
+      - release
+      - build-amd64
+      - build-arm64
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout
+        uses: actions/checkout@v3
         with:
-          upload_url: ${{ steps.release.outputs.upload_url }}
-          asset_path: ./cmd/convox/pkg/convox-darwin-arm64
-          asset_name: convox-macos-arm64
+          fetch-depth: 0
+      - uses: actions/download-artifact@v2
+        with:
+          name: convox-darwin-arm64
+      - name: release
+        env:
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+        uses: actions/upload-release-asset@v1.0.2
+        with:
           asset_content_type: application/octet-stream
+          asset_name: convox-macos-arm64
+          asset_path: ./convox-darwin-arm64
+          upload_url: "${{ needs.release.outputs.upload_url }}"
   ci:
     if: github.repository == 'convox/convox'
-    needs: release
+    needs:
+      - release-cli-linux
+      - release-cli-linux-arm64
+      - release-cli-macos
+      - release-cli-macos-arm64
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -146,7 +257,7 @@ jobs:
       - name: install
         run: ci/install.sh
       - name: wait
-        run: sleep 600
+        run: sleep 300
       - name: test
         run: ci/test.sh
       - name: debug
@@ -158,7 +269,11 @@ jobs:
   ci-downgrade:
     if: github.repository == 'convox/convox'
     environment: 'UpgradeDowngradeTests'
-    needs: release
+    needs:
+      - release-cli-linux
+      - release-cli-linux-arm64
+      - release-cli-macos
+      - release-cli-macos-arm64
     runs-on: ubuntu-latest
     env:
       provider: aws
@@ -201,7 +316,11 @@ jobs:
   ci-upgrade:
     if: github.repository == 'convox/convox'
     environment: 'UpgradeDowngradeTests'
-    needs: release
+    needs:
+      - release-cli-linux
+      - release-cli-linux-arm64
+      - release-cli-macos
+      - release-cli-macos-arm64
     runs-on: ubuntu-latest
     env:
       provider: aws
